# Enablement

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  PLAYBOOK.md  README.md  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: build-and-publish.yaml  ci.yml  coverage.yml  sanitizers.yml  security-audit.yml
crates/creto-common/: Cargo.toml
crates/creto-common/fuzz/: Cargo.toml
crates/creto-common/fuzz/fuzz_targets/: error_format.rs  identity_parse.rs
crates/creto-common/src/: config.rs  error.rs  health.rs  identity.rs  lib.rs  types.rs
crates/creto-integration-tests/: Cargo.toml
crates/creto-integration-tests/src/: common.rs  lib.rs
crates/creto-integration-tests/tests/: cross_product_integration.rs  messaging_integration.rs  metering_integration.rs  oversight_integration.rs  oversight_integration_extended.rs  runtime_integration.rs
crates/creto-messaging/: Cargo.toml
crates/creto-messaging/benches/: crypto.rs
crates/creto-messaging/fuzz/: Cargo.toml
crates/creto-messaging/fuzz/fuzz_targets/: envelope_deserialize.rs  topic_config_parse.rs
crates/creto-messaging/src/: channel.rs  envelope.rs  keys.rs  lib.rs  ratchet.rs  repository.rs  service.rs  session.rs  topic.rs  x3dh.rs
crates/creto-metering/: Cargo.toml  build.rs
crates/creto-metering/benches/: ingestion.rs  quota.rs
crates/creto-metering/fuzz/: Cargo.toml
crates/creto-metering/fuzz/fuzz_targets/: grpc_event_parse.rs  usage_event_json.rs
crates/creto-metering/proto/: metering.proto
crates/creto-metering/src/: aggregation.rs  credits.rs  dedup.rs  events.rs  invoice.rs  lib.rs  pricing.rs  quota.rs  repository.rs  service.rs  validation.rs
crates/creto-metering/src/grpc/: creto.metering.v1.rs  mod.rs  service.rs  types.rs
crates/creto-metering/src/quota/: bloom.rs  enforcer.rs  mod.rs  reservation.rs  types.rs
crates/creto-oversight/: Cargo.toml
crates/creto-oversight/benches/: policy.rs
crates/creto-oversight/examples/: policy_triggers.rs
crates/creto-oversight/src/: approval.rs  channels.rs  checkpoint.rs  context.rs  lib.rs  metering.rs  policy.rs  repository.rs  request.rs  service.rs  state.rs  triggers.rs
crates/creto-oversight/src/migrations/: add_checkpoints_table.sql
crates/creto-oversight/tests/: channel_tests.rs  checkpoint_recovery_tests.rs  checkpoint_tests.rs  policy_trigger_tests.rs  property_tests.rs
crates/creto-runtime/: Cargo.toml
crates/creto-runtime/benches/: sandbox.rs
crates/creto-runtime/src/: attestation.rs  checkpoint.rs  execution.rs  lib.rs  metering.rs  network.rs  pool.rs  repository.rs  resources.rs  sandbox.rs  secrets.rs  service.rs
demos/healthcare-demo/: .env.example  .gitignore  README.md  index.html  jest.config.js  package.json  tsconfig.json  tsconfig.server.json  vite.config.ts
demos/healthcare-demo/data/: demo-data.json
demos/healthcare-demo/docs/: SPARC-COMPLETION-SUMMARY.md
demos/healthcare-demo/tests/: setup.ts
demos/psa-demo/: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.server.json  vite.config.ts
demos/psa-demo/scripts/: seed.ts
demos/psa-demo/tests/: setup.ts
demos/trading-demo/: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  BACKEND_SUMMARY.md  CHANGELOG.md  Dockerfile  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  README.md  README_COMPONENTS.md  SETUP.md  docker-compose.yml  index.html  jest.config.js  package.json  playwright.config.ts  tailwind.config.js  tsconfig.client.json  tsconfig.json  tsconfig.server.json  vite.config.ts  vitest.config.ts
demos/trading-demo/data/: trading-demo.db
demos/trading-demo/docs/: API.md  API_STRUCTURE.md  ARCHITECTURE.md  COMPONENT_API.md  DEMO_SCRIPT.md  IMPLEMENTATION_SUMMARY.md  SERVICE_ARCHITECTURE.md  TDD_IMPLEMENTATION.md  TDD_WORKFLOW.md  TESTING_GUIDE.md  phase5-completion-summary.md
demos/trading-demo/scripts/: README.md  demo-scenario.ts  reset-demo.ts  seed-demo-data.ts
demos/trading-demo/src/: test-setup.ts
demos/travel-demo/: .eslintrc.json  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.server.json  vite.config.ts
deploy/docker/: Dockerfile.messaging  Dockerfile.metering  Dockerfile.oversight  Dockerfile.runtime
deploy/docs/: DEPLOYMENT_RUNBOOK.md  SECURITY_CHECKLIST.md
deploy/scripts/: rollback.sh
docs/: DEMO_ROADMAP.md  ERROR_CODES.md  creto-investor-narratives.md  cross-cutting-integration-analysis.md
docs/analysis/: runtime-oss-alignment-report.md
docs/decisions/: ADR-001-hybrid-signatures.md  ADR-002-storage-strategy.md  ADR-003-warm-pool-design.md  ADR-004-message-encryption.md  ADR-005-quota-enforcement.md  ADR-006-oversight-channels.md  ADR-007-sandbox-runtime.md  ADR-008-api-versioning.md  ADR-009-observability-stack.md  ADR-010-ci-cd-pipeline.md  ADR-011-inference-routing.md  ADR-012-air-gap-deployment.md
docs/diagrams/: c4-container.md  c4-context.md  component-messaging.md  component-metering.md  component-oversight.md  component-runtime.md  data-flow-matrix.md
docs/investor-demos/: demo-1-autonomous-trading.md  demo-2-zero-person-manufacturing.md  demo-3-healthcare-ai-orchestration.md  executive-summary.md
docs/operations/: ENABLEMENT_RUNBOOK.md
docs/sdd/: 00-overview.md  01-requirements.md  02-architecture.md  03-data-design.md  04-api-design.md  05-security-design.md  06-integration-design.md  07-deployment-design.md  08-testing-strategy.md  09-implementation-plan.md  AGENT_ASSIGNMENTS.md  CROSS_PRODUCT_INTEGRATION.md  DEPENDENCY_GRAPH.md  EDGE_CASES_AND_FAILURE_MODES.md  ERROR_HANDLING_MATRIX.md  EXPANSION_PLAN.md  RISK_MITIGATION.md  SOVEREIGN_INTEGRATION_SDD.md  SPARC_DELIVERY_PLAN.md  TEST_STRATEGY.md  WEEKLY_TIMELINE.md  dependency-graph.md  integration-points.md  interface-contracts.md  requirements-traceability-matrix.md
migrations/: 001_metering_schema.sql  002_oversight_schema.sql  003_runtime_schema.sql  004_messaging_schema.sql
scripts/: setup-deps.sh
(+234 files in other folders)
