[workspace]
resolver = "2"
members = [
    "crates/creto-common",
    "crates/creto-metering",
    "crates/creto-oversight",
    "crates/creto-runtime",
    "crates/creto-messaging",
    "crates/creto-integration-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Creto-Systems/Enablement"
rust-version = "1.75"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
trait-variant = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Web Framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Cryptography
ring = "0.17"
x25519-dalek = "2.0"
ed25519-dalek = "2.0"
chacha20poly1305 = "0.10"
blake3 = "1.5"

# Zeroization & Secret Management (Security Layer compliance)
zeroize = { version = "1.7", features = ["derive"] }
secrecy = { version = "0.8", features = ["serde"] }

# Time & IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }

# Encoding
base64 = "0.22"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }

# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }

# gRPC
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Validation
validator = { version = "0.20", features = ["derive"] }

# Internal crates
creto-common = { path = "crates/creto-common" }
creto-metering = { path = "crates/creto-metering" }
creto-oversight = { path = "crates/creto-oversight" }
creto-runtime = { path = "crates/creto-runtime" }
creto-messaging = { path = "crates/creto-messaging" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
