[package]
name = "creto-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared types and utilities for Creto Enablement Layer"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true, optional = true }
figment = { workspace = true, optional = true }

[features]
default = []
sqlx = ["dep:sqlx"]
config = ["dep:figment"]

[dev-dependencies]
proptest = { workspace = true }
