[package]
name = "creto-oversight"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Human-in-the-loop approval workflows for AI agents"

[dependencies]
creto-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }

# Channel adapter dependencies
reqwest = { version = "0.12", features = ["json"], optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
urlencoding = { version = "2.1", optional = true }

# Optional: Metering integration for usage tracking
creto-metering = { workspace = true, optional = true }

[features]
default = []
metering = ["dep:creto-metering"]
channels = ["dep:reqwest", "dep:sha2", "dep:base64", "dep:urlencoding"]

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
criterion = { workspace = true }

[[bench]]
name = "policy"
harness = false
