[package]
name = "creto-metering-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

# Exclude from parent workspace
[workspace]

[dependencies]
libfuzzer-sys = "0.4"
creto-metering = { path = ".." }
creto-common = { path = "../../creto-common" }
serde_json = "1.0"

[[bin]]
name = "grpc_event_parse"
path = "fuzz_targets/grpc_event_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "usage_event_json"
path = "fuzz_targets/usage_event_json.rs"
test = false
doc = false
bench = false
